Added AWS authentication

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.amazonaws.mobile.samples.notes"
-        minSdkVersion 19
+        minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -45,5 +45,8 @@ dependencies {
     // AWS SDK for Android
     compile 'com.amazonaws:aws-android-sdk-core:2.6.+'
     compile 'com.amazonaws:aws-android-sdk-auth-core:2.6.+@aar'
+    compile 'com.amazonaws:aws-android-sdk-auth-ui:2.6.+@aar'
+    compile 'com.amazonaws:aws-android-sdk-auth-userpools:2.6.+@aar'
+    compile 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.6.+'
     compile 'com.amazonaws:aws-android-sdk-pinpoint:2.6.+'
 }
